test/Fail/Issue1181.err
Issue1181.agda:12.6-7: error: [UnequalTypes]
The type
  a ≡ b * c
is not a subtype of
  Σ Nat (λ m → Σ Nat (λ n₁ → Σ Nat (λ p → m ≡ n₁ * p)))
when checking that the expression d has type
Σ Nat (λ m → Σ Nat (λ n₁ → Σ Nat (λ p → m ≡ n₁ * p)))
